# react-type-study

./: README.md
client/: .gitignore  README.md  package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/api/: requests.ts  types.ts
client/src/components/: ClientEditor.tsx  ClientList.tsx  DealEditor.tsx
server/: pyproject.toml
server/server/: __main__.py  db.py  server.py
server/server/server/: __init__.py  app.py  client.py  deal.py
